# tinbox

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  email.rs  main.rs  widget.rs
src/widget/: emails.rs  preview.rs  search.rs  sidebar.rs
