[package]
name = "tinbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.1"
native-tls = "0.2.11"
base64 = "0.22.0"
mail-parser = "0.9.2"
html2text = "0.12.4"
confy = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio = { version = "1.36.0", features=["rt", "macros", "rt-multi-thread"] }
