[package]
name = "tinbox"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["tui", "cli", "email", "imap"]
description = "A modern Rust email client for the terminal"
readme = "README.md"
repository = "https://github.com/Beastwick18/tinbox/"
license = "GPL-3.0-or-later"

[dependencies]
base64 = "0.22.0"
chrono = "0.4.37"
confy = "0.6.0"
crossterm = "0.27.0"
html2text = "0.12.4"
imap = "2.4.1"
mail-parser = "0.9.2"
native-tls = "0.2.11"
ratatui = "0.26.1"
regex = "1.10.4"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.36.0", features=["rt", "macros", "rt-multi-thread"] }
unicode-width = "0.1.11"
